ascanruels: Address SAST (Sonar) findings in SQLi Rule
- CHANGELOG > Add maint note.
- SqlInjectScanRule
    - Replace Arrays.asList with inline array declarations with
List.of().
    - Change enum names to full caps.
    - Change static access to constants in abstract classes to use the
base class.
    - Reduce newlines in some comment blocks.
    - Combine nested ifs.
    - Remove unnecessary return statement.
    - Extract a method for boolean based extra info. (Reduce repetition
of string literal/code).
    - Correct array declarations (square brackets on type not name).
    - Extract constants for two multi-occurrence string literals.
    - Move counter from within loop to loop declaration.

Signed-off-by: kingthorin <kingthorin@users.noreply.github.com>